--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head><meta charset="utf-8">
-        <link rel="stylesheet" src="resources/css/style.css">
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="resources/css/style.css">
     </head>
-    <header>Discover hidden places in the world around you</header>
+    <body>
+    <header class="header">Discover hidden places in the world around you</header>
+    <h4 class="download">Download Excursion (Coming soon!)</h4>
+    <video id="phone-video" autoplay muted>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+    <h4 class="title">Your personal travel guide</h4>
+    <h4 class="gray">Excursion remembers places you like, and recommends new points of interest around you.</h4>
+    <img src="resources/images/Camping.jpg" alt="Camping"/>
+    <img src="resources/images/Cellphone-Icon.png" alt="Cell-Phone Icon" class="phone"/>
+    <h4 class="header">Coming Soon for iPhone and Android</h4>
+    <h4 class="download">Download Excursion (Coming soon!)</h4>
+    <p class="copy-right">© Excursion</p>
+    </body>
 </html>
